<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/nav_home"
            android:title="@string/products"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/about"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/nav_logout"/>
        </menu>

    </item>

</menu>