<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.category.DetailCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MainBackColor"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/category_name_or_title"
            android:textColor="@color/main_text_color"
            android:textSize="40sp"
            android:transitionName="@string/logo_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/description_1"
            android:textColor="@color/secondary_text_color"
            android:textSize="18sp"
            android:transitionName="@string/logo_desc" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/secondary_text_color"
            android:textSize="18sp"
            android:transitionName="@string/logo_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/MainColor"
                android:fontFamily="@font/roboto"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:textColor="@color/MainBackColor"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/deleteColor"
                android:fontFamily="@font/roboto"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:textColor="@color/MainBackColor"
                android:textSize="16sp"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@color/transpirant"
            android:elevation="0dp"
            android:fontFamily="@font/roboto"
            android:text="@string/back_to_list"
            android:textAllCaps="true"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:transitionName="@string/signin_signup_trans" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>